<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="smapps.sahil.finalsgradecalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/currentGradeLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/currentGradeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/CurrentGrade"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/currentGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/CurrentGrade_hint"
            android:inputType="numberDecimal"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gradeDesiredLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentGradeLL"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gradeDesiredTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/GradeDesired"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/dropdownArray"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weightLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gradeDesiredLL"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weightTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Weight"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Weight_hint"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/gradeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/weightLL"
        android:text="@string/gradeText"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />


</RelativeLayout>
